# p123api-client

./: .clinerules  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  logging.conf  pyproject.toml  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml  tests.yml
ai-docs/: arch-cache.md  arch.md  prd.md
ai-docs/epic-3-screener-run/: epic-summary.md  story-1-screener-run-basic.md
ai-docs/epic-7-caching/: epic-summary.md  story-1-combined.md  story-2-screener-integration.md  story-3-test-cleanup.md
docs/: p123-api-docs.json  p123-api-examples.txt  p123-api-github.xml  simple_storage.md  vcr_workflow.md
examples/: easy_cache_example.py  enhanced_api_example.py  rank_performance_cache_example.py  simple_cache_example.py  test_cache_manually.py  test_enhanced_api.py
scripts/: format_test_output.py
src/: __init__.py
src/p123_streamlit/: __init__.py  app.py
src/p123api_client/: __init__.py  client.py
src/p123api_client/cache/: __init__.py  config.py  decorators.py  keys.py  manager.py  simple_decorator.py  simple_storage.py  storage.py
src/p123api_client/common/: __init__.py  api_client.py  settings.py
src/p123api_client/models/: __init__.py  enums.py  schemas.py
src/p123api_client/rank_performance/: __init__.py  cached_rank_performance_api.py  models.py  rank_performance_api.py  schemas.py  streamlit_app.py
src/p123api_client/rank_ranks/: rank_ranks_api.py  schemas.py
src/p123api_client/rank_update/: __init__.py  rank_update_api.py
src/p123api_client/screen_backtest/: models.py  schemas.py  screen_backtest_api.py  screen_backtest_app.py
src/p123api_client/screen_run/: __init__.py  cached_screen_run_api.py  schemas.py  screen_run_api.py
src/p123api_client/strategy/: __init__.py  general_info.py  schemas.py  strategy_api.py
src/p123api_client/strategy_ranks/: models.py  strategy_ranks_service.py
src/p123api_client/util/: convert_delimited.py  convert_ranking_format.py  remove_duplicates.py
tests/: __init__.py  base.py  cache_tests.py  conftest.py  sample_visual_test.py  test_cache_manager.py  vcr_patch.py  visual_test_hooks.py
tests/cassettes/auto_vcr/: TestCachedRankPerformanceAPI.test_cache_persistence.yaml  TestCachedRankPerformanceAPI.test_run_rank_performance_single_cached.yaml  TestRankPerformanceAPI.test_run_rank_performance_from_xml.yaml  TestRankPerformanceAPI.test_run_rank_performance_multiple.yaml  TestRankPerformanceAPI.test_run_rank_performance_single.yaml  TestRankUpdateAPI.test_update_rank_from_single_factor.yaml  TestRankUpdateAPI.test_update_rank_from_xml.yaml  TestScreenBacktest.test_run_backtest.yaml  TestScreenBacktestApp.test_multi_factor_screen_backtest_from_tsv.yaml  TestScreenBacktestApp.test_single_factor_screen_backtest.yaml  test_empty_strategy.yaml  test_get_rank_results_for_strategy.yaml  test_get_ranks.yaml  test_get_strategy_details.yaml  test_holdings_dataframe_conversion.yaml
tests/common/: api_config.yaml
tests/rank_performance/: test_cached_rank_performance_api.py  test_rank_performance_api.py  test_streamlit_app.py
tests/rank_performance/cassettes/: TestRankPerformanceAPI.test_run_rank_performance_from_xml.yaml  TestRankPerformanceAPI.test_run_rank_performance_multiple.yaml  TestRankPerformanceAPI.test_run_rank_performance_single.yaml  test_invalid_formula.yaml  test_multi_factor_performance_from_tsv.yaml  test_single_factor_performance.yaml
tests/rank_performance/test_input/: rank_perf_parameters.tsv  test_factors.tsv
tests/rank_ranks/: generate_test_params.py  test_rank_ranks_api.py
tests/rank_ranks/cassettes/: TestRankRanksAPI.test_get_ranks.yaml  TestRankRanksAPI.test_get_ranks_with_csv_output.yaml  TestRankRanksAPI.test_get_ranks_with_options.yaml  test_get_ranks.yaml
tests/rank_ranks/test_input/: rank_ranks_test_params.csv
tests/rank_update/: test_rank_update_api.py
tests/rank_update/cassettes/: TestRankUpdateAPI.test_update_rank_from_multiple_factors.yaml  TestRankUpdateAPI.test_update_rank_from_single_factor.yaml  TestRankUpdateAPI.test_update_rank_from_xml.yaml
tests/rank_update/test_input/: ranking_system_core_combination_v2.xml
tests/screen_backtest/: test_screen_backtest.py  test_screen_backtest_app.py
tests/screen_backtest/cassettes/: TestScreenBacktest.test_run_backtest.yaml  TestScreenBacktestApp.test_multi_factor_screen_backtest_from_tsv.yaml  TestScreenBacktestApp.test_single_factor_screen_backtest.yaml  test_invalid_screen_rule.yaml  test_multi_factor_screen_backtest_from_tsv.yaml  test_single_factor_screen_backtest.yaml
tests/screen_backtest/test_input/: test_factors.tsv  test_quickrank_factors.csv  test_screen_params.csv
tests/screen_run/: __init__.py  conftest.py  test_screen_params.py  test_screen_run.py  test_screen_run_api.py  test_screen_run_consolidated.py  test_screen_run_consolidated.py.bak  test_screen_run_environment.py  test_screen_run_integration.py
tests/screen_run/backup/: test_cache_visual_verification.py  test_screen_run.py  test_screen_run_api.py  test_screen_run_cache.py  test_screen_run_integration.py
tests/screen_run/cassettes/: TestScreenRun.test_run_screen_as_dataframe.yaml  TestScreenRun.test_run_screen_basic.yaml  TestScreenRun.test_run_screen_with_ranking.yaml  TestScreenRun.test_run_simple_screen.yaml  TestScreenRunBasic.test_run_screen_by_id.yaml  TestScreenRunBasic.test_run_simple_screen.yaml  TestScreenRunCache.test_cache_screen_by_id.yaml  TestScreenRunEnvironment.test_run_screen_auto_vcr.yaml  TestScreenRunEnvironment.test_run_screen_by_id_auto_vcr.yaml  test_screen_run_basic.yaml  test_screen_run_with_ranking.yaml
tests/screen_run/test_input/: test_screen_params.csv
tests/strategy/: __init__.py  test_strategy_api.py
tests/strategy/cassettes/: test_empty_strategy.yaml  test_get_strategy_details.yaml  test_holdings_dataframe_conversion.yaml
tests/strategy_ranks/: test_strategy_rank_service.py
tests/strategy_ranks/cassettes/: TestStrategyRanksService.test_get_rank_results_for_strategy.yaml  (+2 more)
(+8 files in other folders)
